# ChangeLog for app-vim/latexsuite
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.42 2011/01/21 17:14:00 xarthisius Exp $

  21 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  latexsuite-1.8.23.20100129.ebuild:
  ppc/ppc64 stable wrt #342883

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org>
  latexsuite-1.8.23.20100129.ebuild:
  alpha/ia64/sparc stable wrt #342883

*latexsuite-1.8.23.20101027 (11 Nov 2010)

  11 Nov 2010; Tim Harder <radhermit@gentoo.org>
  +latexsuite-1.8.23.20101027.ebuild, metadata.xml:
  Version bump. Add html USE flag to optionally install the extra HTML
  documentation.

  01 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  latexsuite-1.8.23.20100129.ebuild:
  stable x86, bug 342883

  28 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  latexsuite-1.8.23.20100129.ebuild:
  Stable on amd64 wrt bug #342883

  27 Oct 2010; Tim Harder <radhermit@gentoo.org>
  latexsuite-1.8.23.20100129.ebuild:
  Don't install buggy tags scripts, use ctags instead.

*latexsuite-1.8.23.20100129 (26 Sep 2010)

  26 Sep 2010; Tim Harder <radhermit@gentoo.org>
  +latexsuite-1.8.23.20100129.ebuild:
  Version bump (fixes bug #289870, thanks to Cornelius Weig for reporting
  and ferret for the ebuild updates) and update to EAPI=3.

  17 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  latexsuite-1.5.20060325.ebuild:
  QA: add prefix keywords

  20 Oct 2009; Víctor Ostorga <vostorga@gentoo.org> metadata.xml:
  Updating email address of James Noble, who is co-maintainer

  14 Sep 2008; Christian Faulhammer <opfer@gentoo.org>
  -latexsuite-1.5.20060124.ebuild:
  clean up

  12 Sep 2008; Markus Meier <maekke@gentoo.org>
  latexsuite-1.5.20060325.ebuild:
  amd64 stable, bug #236537

  06 Sep 2008; nixnut <nixnut@gentoo.org> latexsuite-1.5.20060325.ebuild:
  Stable on ppc wrt bug 236537

  03 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  latexsuite-1.5.20060325.ebuild: