@@ -1,8 +1,20 @@
-DIST latexSuite20060325.tar.gz 217436 RMD160 158534e9686d5732fe2d91128add3bfbdb3d0d1a SHA1 e1bd2982f55f001e4ecf8c79c00bf5fdc521a650 SHA256 bb7d5e427f8026fe391a7bea698480b59f36bcc4497c3b225ecce0e4921e4584
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST vim-latex-1.8.23-20100129-r1104.tar.gz 399859 RMD160 1e555e04f501636784ef616b0d977951d11eef6f SHA1 05c96faf0c117775c520948cd32fc617f30573bb SHA256 b0205540853c5cf7d3e33b1fb73888e729a3c0e8f63c92d15dac91b892236480
 DIST vim-latex-1.8.23-20101027-r1112.tar.gz 402208 RMD160 104e913d26d91295a98eaec5a6d93a0b2db5d8d1 SHA1 44c861044989de3c428662f8bbb8d992f6c0af55 SHA256 ae2b050333c645cdf633b36e98f4d2664ee47cc0e18ad8374bf20b6d79f06bc6
-EBUILD latexsuite-1.5.20060325.ebuild 1118 RMD160 0f69897311e240c89e2049a1b9bdb7ddddd8bddc SHA1 1dd2ad51843dd0705ff5a6795e66d7168603afa3 SHA256 a4754dd577ea1e1b34bcbfe4d8c991975967cb934295a4c6909dd4355b1a3765
 EBUILD latexsuite-1.8.23.20100129.ebuild 1512 RMD160 2129c6a93ec4e4d73bb9cff0b735fd67d3c230de SHA1 9adef7ea8557faf2cc2fa8aeb27840deba807db9 SHA256 be3e0e0eb6434d2af3f1b62a34aa971dc010ef49a0824078459f3b6987618f37
 EBUILD latexsuite-1.8.23.20101027.ebuild 1534 RMD160 d8ae8a1b6f2e8bf26cb3cb907dd8258c23e9b7a3 SHA1 973273190f174e0e1dbdad73da9d869c6dd5f91c SHA256 33ba333625a9629140686b128f4768adcc9e6b35e67eefae1f683d727d07b8bf
-MISC ChangeLog 5464 RMD160 6016ffd077541dabb6163c8311d6d02ccbffe752 SHA1 90019669a21f523b2135e05c3b80e52571fa7121 SHA256 6f4a48bfef7443acf7b952ad73eaf5cb96ce398efced19005434f62aa404fe5e
+MISC ChangeLog 5561 RMD160 e3b4a0ed54f2840d6c0140302d0306590c8d6ab5 SHA1 aae47d52c6a0939b637283b2fe667d4fd647b604 SHA256 e70fb5b3cf81f5c7a342a9a16cdbe7c2739a32072d5089699e30ded9aa982608
 MISC metadata.xml 468 RMD160 b793b5518434bcc710e9d3f6445618bf3810829f SHA1 4f8aecdc172a22d3c6341785f7e08663eb8d1ed3 SHA256 8210ea8fe6cb96bbf2a8d59f224d427cafde0c5766a9a1eda0b11a2ef193bec4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBAgAGBQJNPKx0AAoJEEqz6FtPBkyjwZIH/1JF/i10tdTT8BfB7uM8CXDw
+W2ttFMexxGgBS1EpW5eqlbnCiongcR9R+1aMkN8vNQBP72KYiC2Pzsj2zUNIhEqp
+Y4BH6AFiD8uICZCEZaTUpLFg422BsmAORvtpWv7700dZM7ybRNZ3hBlD0pflKExG
+xsyi1zUNIyeI1WYoVb7j+Z9W6h+NfSqS3N7ihdgopjufI8ZW4wltNnJc5gDubuX8
+2bM49mxz88D/o9zTCqjhndFIg9YOfr4BlkDunfQJc3dddG0re1JjHBq7hixmr1VR
+/jU3fElgk2V3AGTLaccz1fg0PXgmETgMTgLCocwlzUf+7JwodLRIzdj2QgIZ4tU=
+=XcTS
+-----END PGP SIGNATURE-----
