@@ -1,38 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/latexsuite-1.5.20060325.ebuild,v 1.10 2009/12/17 10:38:27 fauli Exp $
-
-inherit vim-plugin versionator
-
-DESCRIPTION="vim plugin: a comprehensive set of tools to view, edit and compile LaTeX documents"
-HOMEPAGE="http://vim-latex.sourceforge.net/"
-
-LICENSE="vim"
-KEYWORDS="alpha amd64 ia64 ppc ~ppc64 sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
-IUSE=""
-
-# See bug #112326 for why we have this nasty hack
-MY_P="latexSuite$(get_version_component_range 3- )"
-S="${WORKDIR}"
-SRC_URI="http://vim-latex.sourceforge.net/download/${MY_P}.tar.gz"
-
-RDEPEND="virtual/latex-base"
-
-VIM_PLUGIN_HELPFILES="latex-suite.txt latex-suite-quickstart.txt latexhelp.txt imaps.txt"
-
-src_install() {
-	into /usr
-	dobin ltags
-	rm ltags
-	vim-plugin_src_install
-}
-
-pkg_postinst() {
-	vim-plugin_pkg_postinst
-	elog
-	elog "To use the latexSuite plugin add:"
-	elog "   filetype plugin on"
-	elog '   set grepprg=grep\ -nH\ $*'
-	elog "to your ~/.vimrc-file"
-	elog
-}
