@@ -1,6 +1,10 @@
 # ChangeLog for app-vim/latexsuite
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.42 2011/01/21 17:14:00 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.43 2011/01/23 22:32:11 radhermit Exp $
+
+  23 Jan 2011; Tim Harder <radhermit@gentoo.org>
+  -latexsuite-1.5.20060325.ebuild:
+  Remove old
 
   21 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
   latexsuite-1.8.23.20100129.ebuild:
